Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-105310

Using deprecated keyword breaks the build

XMLWordPrintable

    • macOS, Windows
    • 84ab6c1aa1 (qt/qtbase/dev) 84ab6c1aa1 (qt/tqtc-qtbase/dev) be0267390c (qt/tqtc-qtbase/6.2) 6040dece1f (qt/qtbase/6.4) d21730b2ff (qt/qtbase/6.3) d21730b2ff (qt/tqtc-qtbase/6.3)

      If 'deprecated' keyword is used with any of QObject inherited class. this does not compile.
      Attached example reproduces this.

      With

      class [[deprecated]] MainWindow : public QMainWindow
      

      moc doesn't see the MainWindow class:

      ../untitled348/mainwindow.h:0:1: note: No relevant classes found. No output generated.
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            fabiankosmale Fabian Kosmale
            irfan.omair@digia.com Irfan Omair
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes