moc: handle attributes in class declarations

We already had code to handle attributes on funtcions, but we didn't
handle them correctly for classes so far.
Fix this by simply skipping over the attribute.

Fixes: QTBUG-105310
Change-Id: Ic4149f940e74820de4f2fa9540d9dc5b4e626a3a
Reviewed-by: Marc Mutz <marc.mutz@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
(cherry picked from commit 84ab6c1aa1fe4051edb9f96714f0f691d639b725)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>