tests/auto/tools/moc/cxx-attributes.h
@@ -35,7 +35,7 @@ QT_WARNING_PUSH
 QT_WARNING_DISABLE_CLANG("-Wunknown-attributes")
 QT_WARNING_DISABLE_GCC("-Wattributes")
 
-class CppAttribute : public QObject
+class [[deprecated]] CppAttribute : public QObject
 {
     Q_OBJECT
 signals:
